stupid bench(node clustering inside one cpu core docker container)

--- a/docker-1cpu/package.json
+++ b/docker-1cpu/package.json
@@ -2,17 +2,16 @@
   "name": "docker-1cpu",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "start-cluster": "node cluster.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1"
   }
 }
